# Food_Classification

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
config/: train_config_full.yaml  train_config_mixed.yaml  train_config_test.yaml
models/: README.md
runs-251201/classify/mixed_food/: args.yaml  results.csv
src/: __init__.py  predict.py  prepare_data.py  train.py
